# UFO-Shooter

./: CMakeLists.txt  Components.h  Entity.h  EntityManager.cpp  LICENSE  README.md  Vec2.cpp
assets/: config.txt
src/: Config.h  Entity.cpp  EntityManager.h  Game.cpp  Game.h  Vec2.h  config.txt  main.cpp
